# XovateTechnicalTaskChallenge

./: README.md  Xovate Technical Task Challenge for Full Stack Software Engineer.docx  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py  schemas.py  validator.py
data/: test_data_clean.csv  test_data_dirty.csv  test_data_missing_age.csv  test_data_sample.csv
frontend/: Dockerfile  nginx.conf
frontend/src/: App.tsx  index.css  types.ts
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: main.rs  schemas.rs  validator.rs
scripts/: generate_large_data.py
