[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
bytes = "1"
